# YXAudioPlayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/yx/yxaudioplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/yx/yxaudioplayer/: CutAudioActivity.java  MainActivity.java  VideoActivity.java
app/src/main/res/layout/: activity_cut_audio.xml  activity_main.xml  activity_video.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yx/yxaudioplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
yxaudioplayerlib/: CMakeLists.txt  build.gradle
yxaudioplayerlib/src/androidTest/java/com/yx/yxaudioplayerlib/: ExampleInstrumentedTest.java
yxaudioplayerlib/src/main/: AndroidManifest.xml
yxaudioplayerlib/src/main/cpp/: AndroidLog.h  YXAudio.cpp  YXAudio.h  YXBufferQueue.cpp  YXBufferQueue.h  YXCallJava.cpp  YXCallJava.h  YXFFmpeg.cpp  YXFFmpeg.h  YXPcmBean.cpp  YXPcmBean.h  YXPlayStatus.cpp  YXPlayStatus.h  YXQueue.cpp  YXQueue.h  YXVideo.cpp  YXVideo.h  native-lib.cpp
yxaudioplayerlib/src/main/java/com/yx/yxaudioplayerlib/: Demo.java  YXTimeInfoBean.java
yxaudioplayerlib/src/main/java/com/yx/yxaudioplayerlib/enums/: ChannelEnum.java
yxaudioplayerlib/src/main/java/com/yx/yxaudioplayerlib/listener/: yxOnCompleteListener.java  yxOnErrorListener.java  yxOnLoadListener.java  yxOnPauseResumeListener.java  yxOnPcmInfoListener.java  yxOnPreparedListener.java  yxOnRecordTimeListener.java  yxOnTimeInfoListener.java  yxOnValueDBListener.java
yxaudioplayerlib/src/main/java/com/yx/yxaudioplayerlib/log/: MyLog.java
yxaudioplayerlib/src/main/java/com/yx/yxaudioplayerlib/opengl/: YXGLSurfaceView.java  YXImageRenderer.java  YXShaderUtil.java
yxaudioplayerlib/src/main/java/com/yx/yxaudioplayerlib/player/: YXAudioPlayer.java
yxaudioplayerlib/src/main/java/com/yx/yxaudioplayerlib/util/: YXTimeUtil.java
yxaudioplayerlib/src/main/res/values/: strings.xml
yxaudioplayerlib/src/test/java/com/yx/yxaudioplayerlib/: ExampleUnitTest.java
